--- a/web_hw2_1_cache.html
+++ b/web_hw2_1_cache.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<TILTLE> 作業 2 </TILTLE>
+	<TILTLE> Nicole Chang's 作業 2 第 1 題 </TILTLE>
 <style>
 .mainContent
 {
@@ -19,7 +19,6 @@
 {
 	margin:0 auto;
 }
-
 
 </style>
 </head>
