--- a/hw3_1_Album1.html
+++ b/hw3_1_Album1.html
@@ -12,12 +12,16 @@
     {
 	    margin:0 auto;
     }
+	h1
+	{
+        text-align:center;
+	}
 </style>
 
 </head>
 
 <body>
-<h1 class=".mainContent">Nicole Chang's HW 3 ¨€√Ø</h1>
+<h1 class="mainContent" style="text-align:center">Nicole Chang's HW 3 ¨€√Ø</h1>
 
 
 <script>
