--- a/hw3_2_Recursive_Iterate.html
+++ b/hw3_2_Recursive_Iterate.html
@@ -131,11 +131,8 @@ so the javascript for-loop cannot work !
 
 /**************************/
 </script>
-<form>
 
-</form>
-
-
+<br><br><input type=text value="Heay" >hello kitty
 
 </body>
 
